versions/v1.1.0/README.md
# 知识图谱项目

这是一个基于React和Cytoscape.js的知识图谱可视化项目，用于展示和管理知识点和能力点之间的关系。

## 版本历史

### v1.0.0 (当前版本)
- 初始版本
- 实现了基本的知识图谱和能力图谱的可视化
- 支持节点的添加、删除和编辑
- 支持节点的展开/收起功能
- 实现了节点的拖拽功能
- 添加了节点提示框功能
- 支持节点的自动布局

## 功能特性

- 双图谱系统：支持知识图谱(DS)和能力图谱(AB)
- 节点管理：
  - 添加新节点（支持自动ID生成和自定义ID）
  - 删除现有节点
  - 编辑节点属性
- 可视化功能：
  - 节点展开/收起
  - 节点拖拽
  - 自动布局
  - 节点提示框
- 交互功能：
  - 点击节点展开/收起
  - 拖拽节点调整位置
  - 双击画布重置视图
  - 鼠标悬停显示节点详情

## 技术栈

- React
- TypeScript
- Cytoscape.js
- cytoscape-cose-bilkent (布局算法)

## 项目结构

```
src/
  ├── components/
  │   └── SafeNodeObject.tsx    # 节点渲染组件
  ├── utils/
  │   └── excelReader.ts        # Excel文件读取工具
  └── Graph.tsx                 # 主图谱组件
```

## 开发指南

1. 安装依赖：
```bash
npm install
```

2. 启动开发服务器：
```bash
npm start
```

3. 构建生产版本：
```bash
npm run build
```

## 版本控制

项目使用Git进行版本控制，每个版本都会记录在此README文件中。主要版本号变更代表重大更新，次要版本号变更代表功能更新，修订号变更代表bug修复和小改动。
