versions/v1.5.0/README.md
# 知识图谱与能力图谱可视化工具 v1.5.0

## 项目简介
这个项目是一个基于React和Cytoscape.js的知识图谱和能力图谱可视化工具。它允许用户通过Excel文件导入知识点和能力点数据，构建图谱关系，并进行交互式操作。

## 版本1.5.0更新内容
1. 改进高亮显示功能，点击节点时会高亮显示相关节点和边
2. 优化展开/收起节点逻辑，不再触发整个图谱重新布局
3. 采用v1.4.0版本的布局算法，改进节点位置计算
4. 添加更流畅的过渡动画和视觉效果

## 主要功能
- 从Excel导入知识点和能力点数据
- 可视化知识图谱和能力图谱
- 展开/收起节点层级
- 节点拖拽功能
- 节点搜索功能
- 节点添加、编辑和删除
- 节点右键菜单操作
- 节点高亮显示

## 技术栈
- React
- TypeScript
- Cytoscape.js (图谱可视化)
- ExcelJS (Excel文件处理)
- TailwindCSS (样式)

## 使用方法
1. 准备知识点Excel文件和能力点Excel文件（参考模板格式）
2. 将Excel文件放入public目录
3. 启动应用，自动加载并显示图谱
4. 点击节点进行展开/收起操作
5. 使用搜索框查找特定节点
6. 右键节点使用上下文菜单

## 文件格式
知识点和能力点Excel文件需要包含以下列：
- id: 节点唯一标识符
- label: 节点显示名称
- difficulty: 难度值(0-1)
- importance: 重要性值(0-1)
- description: 节点描述（可选）
- tag: 标签（仅能力点，可选）

## 数据关系说明
- 知识点ID以"DS"开头
- 能力点ID以"AB"开头
- 父子关系通过ID前缀确定（如DS01是DS0101的父节点）
- 知识点和能力点之间的映射关系通过专门的映射文件建立

## 版本历史

### v1.0.0 (当前版本)
- 初始版本
- 实现了基本的知识图谱和能力图谱的可视化
- 支持节点的添加、删除和编辑
- 支持节点的展开/收起功能
- 实现了节点的拖拽功能
- 添加了节点提示框功能
- 支持节点的自动布局

## 功能特性

- 双图谱系统：支持知识图谱(DS)和能力图谱(AB)
- 节点管理：
  - 添加新节点（支持自动ID生成和自定义ID）
  - 删除现有节点
  - 编辑节点属性
- 可视化功能：
  - 节点展开/收起
  - 节点拖拽
  - 自动布局
  - 节点提示框
- 交互功能：
  - 点击节点展开/收起
  - 拖拽节点调整位置
  - 双击画布重置视图
  - 鼠标悬停显示节点详情

## 项目结构

```
src/
  ├── components/
  │   └── SafeNodeObject.tsx    # 节点渲染组件
  ├── utils/
  │   └── excelReader.ts        # Excel文件读取工具
  └── Graph.tsx                 # 主图谱组件
```

## 开发指南

1. 安装依赖：
```bash
npm install
```

2. 启动开发服务器：
```bash
npm start
```

3. 构建生产版本：
```bash
npm run build
```

## 版本控制

项目使用Git进行版本控制，每个版本都会记录在此README文件中。主要版本号变更代表重大更新，次要版本号变更代表功能更新，修订号变更代表bug修复和小改动。
